#6 - fim das correções

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -183,3 +183,59 @@
   year = 2014,
   org-short={ROBOCORE}
 }
+
+@misc{ref-jc,
+  author = {José Claudio},
+  title = {Reduzindo a conta de energia el{\'e}trica},
+  url = {http://www.joseclaudio.eng.br/geradores/consumo_na_ponta},
+  urldate = {2005},
+  year = 2005,
+  org-short={José Claudio}
+}
+
+
+@misc{ref-g1,
+  author = {G1},
+  title = {Usina de Belo Monte causa impactos ambientais e sociais em Altamira (PA)},
+  url = {http://g1.globo.com/profissao-reporter/noticia/2016/07/usina-de-belo-monte-causa-impactos-ambientais-e-sociais-em-altamira-pa.html},
+  urldate = {2016},
+  year = 2016,
+  org-short={G1}
+}
+
+@techreport{ref-conju,
+    title={A conjuntura atual do setor el{\'e}trico brasileiro},
+    year={2000},
+    address={Rio de Janeiro},
+    pages={58},
+    org-short={Setor Energ{\'e}tico},
+    organization={BIBLIOTECA DIGITAL}
+}
+
+
+@misc{ref-jlgb,
+  author = {João Luis Grizinsky de Brito},
+  title = {Sistema para monitoramento de consumo de energia el{\'e}trica particular, em tempo real e n{\~a}o invasivo utilizando a tecnologia Arduino},
+  url = {http://www.uel.br/ctu/deel/TCC/TCC2016_JoaoLuisGrizinskyBrito.pdf},
+  urldate = {2016},
+  year = 2016,
+  org-short={João Luis Grizinsky de Brito}
+}
+
+@misc{ref-apc,
+  author = {Alysson Percicotty da Costa},
+  title = {DESENVOLVIMENTO DE UM PROT{\'O}TIPO PARA MEDIÇ{\~A}O DE ENERGIA EL{\'E}TRICA},
+  url = {https://nupet.daelt.ct.utfpr.edu.br/tcc/engenharia/doc-equipe/2015_1_06/2015_1_06_final.pdf},
+  urldate = {2016},
+  year = 2016,
+  org-short={Alysson Percicotty da Costa}
+}
+
+@misc{ref-rpc,
+  author = {Rodrigo Pinheiro Carvalho},
+  title = {CLOUDPOWERSAVE - SISTEMA DE MONITORAMENTO REMOTO DE ENERGIA ELETRICA BASEADO NAS TECNOLOGIAS CLOUD E MOBILE },
+  url = {http://monografias.poli.ufrj.br/monografias/monopoli10008859.pdf},
+  urldate = {2013},
+  year = 2013,
+  org-short={Rodrigo Pinheiro Carvalho}
+}
