--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 \titulo{{\normalfont \textbf{PROPOSTA DE UMA FERRAMENTA DE BAIXO CUSTO PARA O MONITORAMENTO DE ENERGIA RESIDENCIAL}}}
 \autor{JONATHAN DA SILVA BRAGA}
 \local{NATAL -- RN}
-\data{JUNHO DE 2018}
+\data{JULHO DE 2018}
 \instituicao{
   UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE
   \par
@@ -60,10 +60,7 @@
 }
 \tipotrabalho{Relatório técnico}
 
-\preambulo{Trabalho de Conclusão de Curso de Engenharia Mecatrônica da Universidade Federal do Rio Grande do Norte, apresentado como requisito parcial para a obtenção do grau de Bacharel em Engenharia Mecatrônica
-\newline 
-\newline 
-Orientador: Carlos Manuel Dias Viegas}
+\preambulo{Trabalho de Conclusão de Curso apresentado ao curso de Engenharia Mecatrônica da Universidade Federal do Rio Grande do Norte como parte dos requisitos para a obtenção do título de Engenheiro Mecatrônico, orientado pelo Professor Carlos Manuel Dias Viegas.}
 
 % Configurações de aparência do PDF final
 % alterando o aspecto da cor azul
@@ -126,7 +123,7 @@ Orientador: Carlos Manuel Dias Viegas}
 		\vspace*{\fill}
 
 		NATAL -- RN\\
-		JUNHO DE 2018
+		JULHO DE 2018
 		\vspace*{0.5cm}
 
 	\end{center}
