--- a/pre-textuais/folha-de-aprovacao.tex
+++ b/pre-textuais/folha-de-aprovacao.tex
@@ -16,13 +16,14 @@
 		\vspace*{\fill}
 	\end{center}
 	
-	Trabalho aprovado. \imprimirlocal, 08 de Dezembro de 2017:
-	
+	Banca Examinadora do Trabalho de Conclusão de Curso	
 	
 	\setlength{\ABNTEXsignwidth}{14cm}
-	\assinatura{\textbf{Prof. Dr. Carlos Manuel Dias Viegas - Orientador} \\ UFRN} 
-	\assinatura{\textbf{Prof. Dr. Cicrano da Silva - Coorientador} \\ UFRN}
-	\assinatura{\textbf{MSc. Alguém externo - Convidado} \\ Empresa ou instituição }
+	\assinatura{\textbf{Prof. Dr. Carlos Manuel Dias Viegas - Orientador}} 
+	\assinatura{\textbf{Prof. Dr. Danilo Curvelo de Souza}}
+	\assinatura{\textbf{Prof. M.Sc. Sérgio Natan Silva}}
+
+	\vspace{1.5cm}
 	
 	\begin{center}
 		\vspace*{0.5cm}
