--- a/pre-textuais/resumo.tex
+++ b/pre-textuais/resumo.tex
@@ -1,6 +1,10 @@
 % resumo na língua vernácula (obrigatório)
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
+Braga, J. S. \textbf{Proposta de uma ferramenta de baixo custo para o monitoramento de energia residencial.} 2018. 35 p. Trabalho de Conclusão de Curso
+(Engenharia Mecatrônica) - Universidade Federal do Rio Grande do Norte, Natal, 2018.
+\vspace*{1cm}
+
 
 Este trabalho consiste no desenvolvimento de um sistema domiciliar de monitoramento de energia elétrica de baixo custo, em tempo real.
 Tem como proposta um dispositivo e um sistema que juntos somam a nova realidade de meios para a economia de energia.
@@ -15,7 +19,9 @@ O intuito é que o constante monitoramento possa trazer uma conscientização da
 % resumo em inglês
 \begin{resumo}[Abstract]
 	\begin{otherlanguage*}{english}	
-	
+Braga, J. S. \textbf{	Proposal of a low cost tool for residential energy monitoring.} 2018. 35 p. Conclusion work project (Graduate in Mechatronics Engineering) - Federal
+University of Rio Grande do Norte, Natal, 2018.
+\vspace*{1cm}	
 	
 This work consists of the development of a real-time home monitoring system for electricity, which is fully customizable.
 It proposes a device and a system that together add the new reality of means for energy saving.
