--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -8,8 +8,7 @@ uma crise hídrica \cite{crise-hidrica-2015}.
 Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de hidrelétricas, essa dependência
 energética junto com a crise hídrica que o país sofreu culminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
 consumo de energia elétrica - que impactou diretamente a vida de cada cidadão brasileiro, trouxe consequências, como o aumento do 
-custo da energia elétrica. Entre 2015 e 2016 a crise hídrica no Brasil não interferiu apenas na conta de luz mas trouxe
-um aumento na inflação do país.
+custo da energia elétrica.
 
 % sustentabilidade
 
@@ -32,9 +31,9 @@ de um país. Esse índice é tão importante que reflete diretamente no ritmo de
 se as atividades industriais de uma nação estão ou não em um bom ritmo e pode detectar se o comércio está em alta,
 devido aos bens e serviços que o povo adquiriu \cite{energia-desenvolvimento}. Porém um crescimento desordenado na população e um crescimento
 exponencial no consumo de energia pode acarretar em problemas para um determinado país.
-Analisando os dados \cite{epe-balanco-final}, o consumo de energia
-elétrica no Brasil vem crescendo ao longo dos anos, nos últimos 35 anos teve um crescimento médio de 6,72\%. Após a crise que o Brasil sofreu entre os anos 2002 e 2005 houve um crescimento
-de 4,91\% na demanda energética do país. A \autoref{fig:consumo_energia_total} nos mostra o cenário de crise energética que o Brasil vinha
+Analisando os dados \cite{epe-balanco-final}, o consumo de energia  
+elétrica no Brasil vem crescendo ao longo dos anos. Segundo \cite{ref-jc}, nos últimos 35 anos teve um crescimento médio de 6,72\%, após a crise que o Brasil sofreu entre os anos 2002 e 2005 houve um crescimento
+de 4,91\% na demanda energética do país. A \autoref{fig:consumo_energia_total} retrata o cenário de crise energética que o Brasil vinha
 passando ao longo dos anos, até 2008 o país consumia mais do que produzia.
 
 \begin{figure}[h!]
@@ -47,18 +46,17 @@ passando ao longo dos anos, até 2008 o país consumia mais do que produzia.
 \FloatBarrier
 
 Para poder acompanhar a crescente demanda por energia elétrica, o governo brasileiro autorizou a contrução de mais de 24 hidrelétricas \cite{governo-preve}.
-Um grande problema desse planejamento que o governo fez são os inúmeros impactos ambientais e econômicos, um exemplo prático é a usina de de Belo Monte - Rio Xingu, Pará - obra que foi planejada
+Um grande problema desse planejamento que o governo fez são os inúmeros impactos ambientais e econômicos, um exemplo prático é a usina de de Belo Monte - Rio Xingu, Pará -. Obra que foi planejada
 para ser a maior hidrelétrica do Brasil, com capacidade de abastecer 40\% das residências \cite{energia-abastece}.
 Deveria ter sido finalizada completamente e ter seu total funcionamento no segundo semestre de 2015, mas até os dias atuais não opera em 100\%. Vale salientar que a construção
 trouxe o desmatamento de áreas indígenas, alagamentos permanentes, comprometimento da fauna e flora e aumento da dificuldade dos transportes fluviais
-de comunidades ribeirinhas.
+de comunidades ribeirinhas \cite{ref-g1}.
 
 Diante da problemática do alto consumo de energia elétrica, surge uma indagação: "Construir usinas mesmo sabendo dos impactos negativos que podem surgir, ou não construí-las e
 aumentar a tarifação pelo consumo de energia visando um uso mais consciente?". A resposta para essas e outras questões que podem aparecer não são fáceis.
 Entretanto o governo brasileiro opitou pela construção de novas usinas e pelo aumento da tarifação no consumo de energia elétrica. 
-Uma medida totalmente cabível que ainda é desconhecida por alguns brasileiros é a chamada "\textit{exposição da informação}", deixando bem claro 
-quanto o consumidor tem gastado ou consumindo ao longo do mês em sua residência, isso é possível graças a equipamentos que estão sempre monitorando
-a rede elétrica.
+Uma medida que poderia ser tomada pelo gorverno, seria a chamada "\textit{exposição da informação}". Ao deixar claro 
+o quanto o consumidor tem gasto de energia elétrica ao longo do mês, isso acarretaria numa consciêntização do consumo de energia elétrica.
 
 % A evolução da tarifa,
 % pode ser observada na \autoref{evolucao-tarifa}
@@ -240,8 +238,8 @@ a rede elétrica.
 % \end{figure}
 % \FloatBarrier
 
-O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, possibilitando ao usuário
-possuir informações valiosas a todo momento. O sistema também disponibiliza de ferramentas para que 
+O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, disponibilizando informações valiosas ao usuário.
+O sistema também disponibiliza de ferramentas para que 
 caso o usuário possua o conhecimento necessário o mesmo venha a modificar ou aprimorar o gerenciamento de energia. O sistema nomeado de \textit{Power Monitor}
 traz consigo uma nova forma de enxergar o consumo dos aparelhos presentes em uma residência, trocando o quilowatt-hora pela moeda de circulação no país,
 o real, tal mudança é o principal fator de conscientização, pois aproxima o consumidor dos gastos energéticos.
@@ -250,7 +248,7 @@ o real, tal mudança é o principal fator de conscientização, pois aproxima o 
 \section{Motivação}
 
 A motivação deste trabalho partiu da analise da atual conjuntura do cenário energético brasileiro que é baseado na falta de transparência da 
-informação levada ao usuário. Notando-se a dificuldade de entender o consumo de energia elétrica dos dispositivos presentes em uma 
+informação levada ao usuário \cite{ref-conju}. Notando-se a dificuldade de entender o consumo de energia elétrica dos dispositivos presentes em uma 
 residencia, fez-se necessário o desenvolvimento de um sistema de monitoramento para uso consciente da energia elétrica.
 % ter informação em tempo real do consumo de energia em um estabelecimento é muito difícil, pois os equipamentos que proporcionam esse tipo de informação
 % não são acessíveis a todos os brasileiros, apenas companhias de energia ou pessoas com alto grau de estudo conseguem manusear ou entender o dados
@@ -263,6 +261,10 @@ residencia, fez-se necessário o desenvolvimento de um sistema de monitoramento 
 O objetivo deste trabalho é propor um sistema de monitoramento de energia elétrica, de baixo custo, para o uso consciente da mesma. 
 O sistema faz uso de medições e cálculos para uma melhor visualização do consumo de energia. Onde o seu principal diferencial é a troca da unidade de medida 
 referente ao consumo elétrico de um aparelho pela moeda de circulação no pais.
+
+% O \textit{Power Monitor} é um sistema de computador composto por um servidor \textit{web} e uma interface \textit{web} de fácil comunicação com \textit{hardwares} que possam 
+% se conectar a uma rede \textit{Wi-Fi}. O sistema é baseado na obtenção dos dados que são aferidos através do sensor de corrente.  
+
 % A objetivo existente neste trabalho é da conscientização do consumidor em relação aos gastos energéticos presentes em sua residência. Percebendo o
 % atual cenário brasileiro de total falta de informação em relação ao consumo em tempo real de energia, junto com o período em que o país 
 % passou de crise hídrica e energética, este trabalho propõe uma alternativa simples e barata onde qualquer brasileiro independente do grau de 
@@ -278,8 +280,21 @@ O Power Monitor foi implementado utilizando a linguagem de programação JavaScr
 O Power Monitor possui um servidor web que é responsável por gravar todos os dados coletados em um banco de dados e fazer a comunicação entre softaware e Hardware. 
 A interface web consome todos os dados gravados e após trata-los e realizar alguns cálculos o resultado é apresentado em forma de gráficos e alertas.
 
-
 \section{Levantamento bibliográfico}
+Trabalhos relacionados ao monitoramento de energia residencial têm sido mais comuns nos últimos anos. Como o monitoramento pode ser feito utilizando eletrônicos e comunicação
+sem fio, os diversos trabalhos tem se direcionado a desenvolver sistemas utilizando microcontroladores e sensores.
+
+
+\cite{ref-jlgb} foi desenvolvido com base na implementação de um sistema particular de monitoramento de consumo de energia elétrica, em tempo real e não invasivo.
+Com o auxílio da plataforma de prototipagem Arduino e dos sensores de corrente e tensão é possível monitorar em tempo real o consumo de uma residência. O intuito principal
+desse trabalho é a conscientização pela economia de energia.
+
+O \cite{ref-apc} é um protótipo desenvolvido para ser um sistema de medição de consumo de energia elétrica no setor residencial, onde os valores de medição
+apresentados para o usuário são convertidos para valores monetários.
+
+
+O trabalho \cite{ref-rpc} visa o monitoramento de energia elétrica, desenvolvido para se comunicar com um sistema \textit{web} e com um aplicativo de celular.
+Com o objetico de usar as informações coletadas pelo dispositivo \textit{Powersave} e disponibilizar ao usuário, para que assim poassa conscientezar o consumo de energia elétrica.
 
 \section{Estrutura do Trabalho}
 O trabalho foi estruturado para que se possa mostrar nos próximos capítulos os seguintes conteúdos:
